# ck-engine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  book.toml  imgui.ini  run.ps1  run.sh
.github/workflows/: deploy.yml
CK-ScriptCore/Source/: Main.cs
CK-ScriptCore/Source/CK/: Input.cs  InternalCalls.cs  KeyCode.cs  Vector2.cs  Vector3.cs
CK-ScriptCore/Source/CK/Scene/: Components.cs  Entity.cs
assets/scenes/: example.scene  physics2d.scene  pink_cube.scene
assets/shaders/: flat_color.glsl  renderer_2d_circle.glsl  renderer_2d_line.glsl  renderer_2d_quad.glsl  renderer_2d_quad.slang  renderer_3d_mesh.slang  texture.glsl  textured_quad.slang  triangle.slang
cmake/: EnableCxxImportStd.cmake  Vulkan.cmake
src/: SUMMARY.md  scripting-engine-mono.md
src/ck/: application.cpp  application.h  core.h  entry_point.cpp  entry_point.h  input.h  key_code.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  mouse_button_code.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  pch.h  test.cpp  test.h  window.h
src/ck/events/: application_event.h  event.h  key_event.h  mouse_event.h
src/ck/imgui/: imgui_layer.cpp  imgui_layer.h
src/ck/include/: ck.h
src/ck/platform/: windows_input.cpp  windows_input.h  windows_window.cpp  windows_window.h
src/ck/platform/opengl/: imgui_opengl_renderer.cpp  imgui_opengl_renderer.h  opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_vertex_array.cpp  opengl_vertex_array.h
src/ck/renderer/: buffer.cpp  buffer.h  graphics_context.h  orthographic_camera.cpp  orthographic_camera.h  render_command.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/editor/: CMakeLists.txt  editor.cpp  editor_camera.cpp  editor_camera.h  editor_camera_3d.cpp  editor_camera_3d.h  editor_layer.cpp  editor_layer.h
src/editor/panels/: content_browser_panel.cpp  content_browser_panel.h  properties_panel.cpp  properties_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h  stats_panel.cpp  stats_panel.h  viewport_panel.cpp  viewport_panel.h
src/engine/: CMakeLists.txt  ck.cppm  pch.h
src/engine/core/: application.cpp  application.h  core.h  deltatime.h  entry_point.cpp  entry_point.h  input.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  profile_timer.h  uuid.cpp  uuid.h  window.h
src/engine/debug/: profiler.h
src/engine/events/: application_event.h  event.h  key_codes.h  key_event.h  mouse_codes.h  mouse_event.h
src/engine/imgui/: imgui_build.cpp  imgui_layer.cpp  imgui_layer.h
src/engine/include/: ck.h
src/engine/math/: math.cpp  math.h
src/engine/platform/: windows_input.cpp  windows_input.h  windows_window.cpp
src/engine/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_frame_buffer.cpp  opengl_frame_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h
src/engine/platform/windows/: windows_input.cpp  windows_platform_utils.cpp  windows_window.cpp  windows_window.h
src/engine/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  editor_camera.cpp  editor_camera.h  frame_buffer.cpp  frame_buffer.h  graphics_context.h  material.cpp  material.h  mesh.cpp  mesh.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  perspective_camera.cpp  perspective_camera.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_3d.cpp  renderer_3d.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h
src/engine/renderer/shader/: graphics_pipeline.cpp  graphics_pipeline.h  shader_module.cpp  shader_module.h  slang_compiler.cpp  slang_compiler.h
src/engine/renderer/vulkan/: allocator.cpp  allocator.h  buffer.cpp  buffer.h  context.cpp  context.h  descriptor.cpp  descriptor.h  frame.cpp  frame.h  image.cpp  image.h  sampler.cpp  sampler.h  swapchain.cpp  swapchain.h  uniform_buffer.h  vma.cpp
src/engine/scene/: components.h  entity.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  scene_serializer.cpp  scene_serializer.h  scriptable_entity.h
src/engine/scripting/: script_engine.cpp  script_engine.h  script_glue.cpp  script_glue.h
src/engine/utils/: platform_utils.h
src/sandbox/: CMakeLists.txt  example_layer.cpp  example_layer.h  main.cpp  sandbox.cpp  sandbox_2d.cpp  sandbox_2d.h
